; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cassette.c_CASSETTE_Remove.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cassette.c_CASSETTE_Remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cassette_file = common dso_local global i32* null, align 8
@CASSETTE_STATUS_NONE = common dso_local global i32 0, align 4
@CASSETTE_status = common dso_local global i32 0, align 4
@CASSETTE_description = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CASSETTE_Remove() #0 {
  %1 = load i32*, i32** @cassette_file, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32*, i32** @cassette_file, align 8
  %5 = call i32 @IMG_TAPE_Close(i32* %4)
  store i32* null, i32** @cassette_file, align 8
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i32, i32* @CASSETTE_STATUS_NONE, align 4
  store i32 %7, i32* @CASSETTE_status, align 4
  %8 = load i8*, i8** @CASSETTE_description, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 0
  store i8 0, i8* %9, align 1
  %10 = call i32 (...) @UpdateFlags()
  ret void
}

declare dso_local i32 @IMG_TAPE_Close(i32*) #1

declare dso_local i32 @UpdateFlags(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
